syntax = "proto3";
package mmn;

option go_package = "mezon-server-sim/api;api";

// =============================================================================
// Common Types
// =============================================================================

message WalletLedger {
  // change set id
  string id = 1;
  // user id
  string user_id = 2;
  // create time (Unix timestamp in seconds)
  uint64 create_time = 3;
  // value
  int32 value = 4;
  // transaction id
  string transaction_id = 5;
}

message WalletLedgerList {
  repeated WalletLedger wallet_ledger = 1;
  int32 count = 2;
}
